# mage-hands

./: .gitignore  README.md
contracts/: Cargo.toml  README.md
contracts/mage-hands-platform/: Cargo.toml  Makefile
contracts/mage-hands-platform/examples/: schema.rs
contracts/mage-hands-platform/src/: contract.rs  lib.rs  msg.rs  project.rs  state.rs
contracts/mage-hands-project/: Cargo.toml  Makefile  README.md
contracts/mage-hands-project/examples/: schema.rs
contracts/mage-hands-project/src/: contract.rs  lib.rs  msg.rs  parse_reply.rs  random.rs  reward.rs  state.rs  viewing_key.rs
mage-hands-platform/examples/: schema.rs
mage-hands-project/: Cargo.toml
mage-hands-project/examples/: schema.rs
tests/: .editorconfig  .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
tests/src/: accounts.ts  index.ts  utils.ts
tests/src/contracts/: contracts.ts  index.ts  platform.ts  project.ts  snip20.ts  snip721.ts
ui/: README.md  package.json  tsconfig.json  webpack.config.ts
ui/public/: index.html  smui.css
ui/src/: App.svelte  Editor.svelte  Header.svelte  Homepage.svelte  Modal.svelte  NewProject.svelte  Pagination.svelte  ProjectDetail.svelte  ProjectPreview.svelte  ProjectPreviewCells.svelte  Projects.svelte  RewardEditor.svelte
ui/src/lib/: categories.ts  contract.ts  env.ts  utils.ts  wallet.ts
ui/src/lib/contracts/: contracts.ts  platform.ts  project.ts  snip20.ts  snip721.ts
ui/src/stores/: keplr.ts  permits.ts
ui/src/styles/: index.scss
ui/src/theme/: _smui-theme.scss
ui/src/theme/dark/: _smui-theme.scss
