[package]
name = "mage-hands-project"
version = "0.3.0"
authors = ["Ben Adams <darwinzero@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" } # or secret-cosmwasm-std = "1.0.0"
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" } # or secret-cosmwasm-storage = "1.0.0"
secret-toolkit = { version = "0.6.0", features = ["crypto", "permit"] }
secret-toolkit-crypto = { version = "0.6.0", features = ["rand"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.12.3"
hex = "0.4.2"
sha2 = { version = "0.9.1", default-features = false }
primitive-types = { version = "0.11.0", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
secp256k1 = "0.20.3"
rand = "0.7.3"
thiserror = "1.0"